complete implementation of tag ticket permission, fix broken style for checkboxes in table cells

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -127,6 +127,9 @@ input[type=checkbox], input[type=radio] {
   padding: 3px;
   margin-left: 165px;
 }
+td input[type=checkbox], td input[type=radio] {
+  margin-left: 0px;
+}
 input[type=radio] {
   bottom: 2px;
 }
